name:               bindings-py
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2010-2013
synopsis:           Low Level Bindings for the Python C API
category:           Foreign
description:        Low Level Bindings for the Python C API
homepage:           https://github.com/domdere/bindings-py
bug-reports:        https://github.com/domdere/bindings-py/issues
cabal-version:      >= 1.10
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/bindings-py.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:          base < 5 && >= 4
                        ,   bindings-DSL
                        ,   containers
                        ,   array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src/haskell

    include-dirs:       src/c/include

    exposed-modules:    Bindings.Python.Raw

    other-modules:      Bindings.Python.Raw.Initialize
                    ,   Bindings.Python.Raw.PyObject
                    ,   Bindings.Python.Raw.PyObject.List
                    ,   Bindings.Python.Raw.PyObject.List.NonFinalised
                    ,   Bindings.Python.Raw.PyObject.Tuple.NonFinalised
                    ,   Bindings.Python.Raw.ReferenceCounting
                    ,   Bindings.Python.Raw.Types

    c-sources:          src/c/bindings.c

executable              noexec
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN 
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4,
                        bindings-py

-- test-suite              doctests
--     type:
--                         exitcode-stdio-1.0
--
--     main-is:
--                         Main.hs
--
--     default-language:
--                         Haskell2010
--
--     build-depends:
--                         base < 5 && >= 4,
--                         doctest >= 0.9.7,
--                         filepath >= 1.3,
--                         directory >= 1.1,
--                         QuickCheck >= 2.0
--
--     ghc-options:
--                         -Wall
--                         -threaded
--
--     hs-source-dirs:
--                         doctests
